<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="login_success">Successfully logged in</string>
    <string name="error">Error occurred</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_invalid_re_password">Passwords doesn\'t match</string>
    <string name="sign_up_success">Registered successfully</string>
    <string name="prompt_password_re">Repeat password</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Important shit do not touch! P.S Seriously, do not touch! -->
    <string name="facebook_app_id">714851881976558</string>

    <string name="action_sign_up_with_facebook">Log in with Facebook</string>
    <string name="home">Home</string>
    <string name="found_items">Found Items</string>
    <string name="lost_items">Lost Items</string>
    <string name="resolved_items">Resolved items</string>
    <string name="matched_items">Matched items</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="background_image">Background image</string>
    <string name="log_out">log_out</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">last_name</string>
    <string name="full_name">Full Name</string>
    <string name="action_sign_up"><![CDATA[Sign Up for Lost&Found]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_finish_registration">Finish your registration</string>
    <string name="finish_registration">Finish Registration</string>
    <string name="title_activity_map">Map Activity</string>

    <string name="new_found_item">I found item</string>
    <string name="new_lost_item">I lost item</string>
    <string name="title_activity_new_lost_item">When,Where,What found</string>
    <string name="title_activity_new_found_items">When,Where,What lost</string>
    <string name="date">Date</string>
    <string name="lost_date">Date</string>
    <string name="pick_place">Pick Place</string>
    <string name="when">When</string>
    <string name="where">Where</string>
    <string name="what">What</string>
    <string name="description">Description</string>
    <string name="radius">Radius</string>
    <string name="item">Item</string>
    <string name="push">Push</string>
    <string name="pick_date">Pick date</string>
    <string name="select_category">Select category</string>

    <string-array name="category_array">
        <item>Animals/Pets</item>
        <item>Bags, Baggage, Luggage</item>
        <item>Clothing/jewelery</item>
        <item>Electronics</item>
        <item>Jewelry</item>
        <item>Other</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
